# roshni

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/ideas/: intelligent-ai-delegation-review.md
src/roshni/: __init__.py
src/roshni/agent/: __init__.py  advisor.py  agent_sdk.py  approval.py  base.py  circuit_breaker.py  conversation.py  default.py  errors.py  memory.py  permissions.py  persona.py  router.py  session.py  task_store.py  tool_policy.py  vault.py
src/roshni/agent/advisors/: __init__.py
src/roshni/agent/hooks/: __init__.py
src/roshni/agent/templates/: __init__.py  agents_template.md  identity_friendly.md  identity_professional.md  identity_warm.md  identity_witty.md  soul_template.md  tools_template.md  user_template.md
src/roshni/core/: __init__.py  config.py  config_schema.py  env.py  events.py  exceptions.py  health.py  secrets.py  types.py
src/roshni/core/llm/: utils.py  (+10 more)
src/roshni/financial/: __init__.py  models.py
src/roshni/gateway/: __init__.py  base.py  cli_gateway.py  event_gateway.py  events.py  scheduler.py
src/roshni/health/: __init__.py  collector.py  etl_base.py  models.py  registry.py
src/roshni/integrations/: __init__.py  gmail.py  gmail_api.py  google_drive.py  google_sheets.py  google_storage.py  notion.py  trello.py
src/roshni/journal/: __init__.py  config.py  models.py  search.py  store.py
tests/: conftest.py
tests/agent/: test_advisor.py  test_agent_sdk.py  test_archive.py  test_base.py  test_circuit_breaker.py  test_context_guard.py  test_conversation.py  test_default_agent.py  test_gateway.py  test_memory.py  test_permissions.py  test_persona.py  test_prompt_modes.py  test_router.py  test_session.py  test_task_store.py  test_templates.py  test_tool_policy.py  test_tool_truncation.py  test_vault.py  test_vault_tools.py
tests/agent/tools/: test_builtin_tool.py  test_delighter_tool.py  test_gmail_tool.py  test_health_tool.py  test_notes_tool.py  test_notion_tool.py  test_obsidian_tool.py  test_tool_definition.py  test_tools_loader.py  test_trello_tool.py
tests/agent/workflow/: test_backend.py  test_models.py  test_orchestrator.py  test_store.py  test_tools.py  test_worker.py
tests/core/: test_auth_profiles.py  test_cache.py  test_config.py  test_config_schema.py  test_env.py  test_events.py  test_exceptions.py  test_file_io.py  test_llm_caching.py  test_llm_client_fallback.py  test_llm_config.py  test_llm_model_selector.py  test_llm_response_continuation.py  test_llm_token_budget.py  test_llm_token_management.py  test_llm_utils.py  test_secrets.py  test_storage.py  test_text.py  test_thinking_levels.py
tests/core/cli/: test_cli.py
tests/financial/: test_life_events.py  test_models.py  test_mortgage.py  test_tax_tables.py  test_zakat.py
tests/gateway/: test_cli_gateway.py  test_event_gateway.py  test_events.py  test_scheduler.py  test_telegram_gateway.py
tests/health/: test_apple_health_export_collector.py  test_collector.py  test_models.py  test_registry.py
tests/integrations/: test_auth.py  test_drive_storage.py  test_gmail.py  test_google_sheets.py  test_notion.py  test_trello.py
tests/journal/: test_config.py  test_models.py  test_search.py
(+59 files in other folders)
